--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<title>Jhay Davis WNM608</title>
 </head>
 <body>
+	<h1>Jhay Davis</h1>
+	<h2>Interaction & UI/UX Design</h2>
+	<h3>Class: WNM608</h3>
+	<p>Welcome to the  week #1 assignment. Developed in sublime and cloned to my git repo.</p>
 	
 </body>
 </html>
