Updated style guid layout for images

--- a/davis.justlin/StyleGuide/index.html
+++ b/davis.justlin/StyleGuide/index.html
@@ -10,12 +10,16 @@
   </head>
   <body>
     <header>
-      <h1>Car Enthusiast Art| STYLE GUIDE</h1>
       <div class="logo">
         <img
-          src="../img/cea-logo-profile.png"
+          src="../img/cea-logo-white-sm.png"
           alt="Car Enthusiast Logo Image"
         />
+      </div>
+      <div>
+        <h1>Car Enthusiast Art| STYLE GUIDE</h1>
+        <hr />
+        <h3>Paintings | Posters | Photography</h3>
       </div>
     </header>
 
@@ -36,25 +40,35 @@
         <hr />
         <h2>Logo</h2>
         <p>Car Enthusiast Art Light Logo</p>
-        <img src="../img/cea-logo-white.png" alt="Car Enthusiast Logo White" />
+        <div class="branding">
+          <img
+            src="../img/cea-logo-white.png"
+            id="brands"
+            alt="Car Enthusiast Logo White"
+          />
+        </div>
         <br />
         <p>Car Enthusiast Art Dark Logo</p>
-        <img src="../img/cea-logo-black.png" alt="Car Enthusiast Logo Dark" />
+        <div class="branding">
+          <img src="../img/cea-logo-black.png" alt="Car Enthusiast Logo Dark" />
+        </div>
         <br />
         <h2>Wordmark</h2>
         <p>Car Enthusiast Art Light Wordmark</p>
-        <img
-          src="../img/cea-logo-wordmark-white.png"
-          alt="Car Enthusiast Wordmark White"
-          id="wordmark"
-        />
+        <div class="branding">
+          <img
+            src="../img/cea-logo-wordmark-white.png"
+            alt="Car Enthusiast Wordmark White"
+          />
+        </div>
         <br />
         <p>Car Enthusiast Art Light Wordmark</p>
-        <img
-          src="../img/cea-logo-wordmark-dark.png"
-          alt="Car Enthusiast Wordmark Dark"
-          id="wordmark"
-        />
+        <div class="branding">
+          <img
+            src="../img/cea-logo-wordmark-dark.png"
+            alt="Car Enthusiast Wordmark Dark"
+          />
+        </div>
         <br />
       </div>
 
