Updated to pull sync with local php dev environment in MAMP
Updated style guide and updated repo to link to local dev environment in MAMP

--- a/davis.justlin/index.html
+++ b/davis.justlin/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="lib/css/styleguide.css" />
     <link rel="stylesheet" href="lib/css/gridSystem.css" />
-    <link rel="stylesheet" href="css/storetheme.css" />
+    <link rel="stylesheet" href="lib/css/storeStyleGuide.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ilv2uut.css" />
     <title>Performance Cars Paintings and Posters</title>
   </head>
